[package]
name = "my-own-uuid"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A macro for generating Uuid Newtypes."
homepage =  "https://github.com/sanbox-irl/my-own-uuid"
repository = "https://github.com/sanbox-irl/my-own-uuid"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }